# sea5kgSudoku

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tests  wsjcpp.yml
sources/: exec_sudoku.pro
sources/src/: main.cpp  seakgExecSudoku.cpp  seakgExecSudoku.h
src/: main.cpp  sea5kgSudoku.cpp  sea5kgSudoku.h  seakgExecSudoku.cpp  seakgExecSudoku.h
src.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_is_possible_value_only_once.cpp  unit_test_is_possible_value_only_once.h  unit_test_regions9x9.cpp  unit_test_regions9x9.h  unit_test_sudoku9x9.cpp  unit_test_sudoku9x9.h
web/: index.html
web/css/: index.css
web/js/: index.js
